--- a/Site/stats.html
+++ b/Site/stats.html
@@ -47,6 +47,7 @@
 </section>
 
 <!-- DATAVIZ -->
+<!-- 1ère dataviz -->
 <div class='tableauPlaceholder' id='viz1620374387836' style='position: relative'>
      <noscript>
           <a href='#'>
@@ -72,6 +73,48 @@
 </div>                
 <script type='text/javascript' src="js/stats.js"></script>
 <div id="viz1620374387836"></div>
+
+<div class="clearfix col-md-12 col-sm-12">
+     <hr>
+</div>
+<div class="container">
+     <div class="row">
+          
+          <div class="col-md-12 col-sm-12">
+               <h2> Indices d'attractivité </h2>
+               <p> par département </p>
+          </div>
+
+     </div>
+</div>
+
+<!-- 2èe dataviz -->
+<div class='tableauPlaceholder' id='viz1620580489577' style='position: relative'>
+     <noscript>
+          <a href='#'>
+               <img alt='Stat Attractivité ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cl&#47;Classeur_16205799941350&#47;StatAttractivit&#47;1_rss.png' style='border: none' />
+          </a>
+     </noscript>
+     <object class='tableauViz'  style='display:none;'>
+          <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+          <param name='embed_code_version' value='3' /> 
+          <param name='site_root' value='' />
+          <param name='name' value='Classeur_16205799941350&#47;StatAttractivit' />
+          <param name='tabs' value='no' />
+          <param name='toolbar' value='yes' />
+          <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cl&#47;Classeur_16205799941350&#47;StatAttractivit&#47;1.png' /> 
+          <param name='animate_transition' value='yes' />
+          <param name='display_static_image' value='yes' />
+          <param name='display_spinner' value='yes' />
+          <param name='display_overlay' value='yes' />
+          <param name='display_count' value='yes' />
+          <param name='language' value='fr' />
+          <param name='filter' value='publish=yes' />
+     </object>
+</div>   
+<script type='text/javascript' src="js/stats_2.js"></script>             
+<div id="viz1620580489577"></div>
+
 
 <!-- FOOTER -->
 
